@@ -11,5 +11,5 @@ public class Api {
     public static final String CONTACT = "/api/v1/contact";
     public static final List<String> HEADERS = Arrays.asList("Authorization", "Content-Type");
     public static final List<String> METHODS = Arrays.asList("GET", "POST", "PUT", "DELETE");
-    public static final List<String> ORIGINS = List.of("http://localhost:3000");
+    public static final List<String> ORIGINS = Arrays.asList("http://localhost:3000", "http://localhost:3001", "http://localhost:3002");
 }
